Making the app working on newer Android Studio somehow. No new features or fixes so far.

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,6 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.ebaschiera.triplecamel.MainFragment">
+    android:layout_height="match_parent" tools:context="com.ebaschiera.triplecamel.MainActivity">
 
     <ScrollView
         android:layout_width="wrap_content"
